--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -28,6 +28,10 @@
     margin-left: 200px;
 }
 
+.signup {
+    margin-left: auto;
+}
+
 .header-container {
     color: #5995da;
     background-color: #d6e9fe;
@@ -51,9 +55,9 @@
 .photo-grid {
     width: 900px;
     display: flex;
-    /* justify-content: center;
-    flex-wrap: wrap; */
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
     align-items: center;
 }
 
@@ -61,4 +65,23 @@
     border: 1px solid #fff;
     width: 300px;
     height: 300px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item {
+    border: 1px solid #fff;
+    background-color: #d6e9fe;
+    height: 200px;
+    flex: 1;
+}
+
+.footer-one,
+.footer-three {
+    background-color: #5995da;
+    flex: initial;
+    width: 300px;
 }
