--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -32,8 +32,15 @@ body {
     color: #f9faf8;
 }
 
+.hero-section > p {
+    font-size: 16px;
+    color: #e5e7eb;
+}
+
 .logo {
     margin-right: auto;
+    color: #f9faf8;
+    font-size: 24px;
 }
 
 ul {
@@ -48,7 +55,7 @@ a {
 }
 
 button {
-    padding: 5px 10px;
+    padding: 10px 25px;
     border-radius: 8px;
     background: #3882f6;
     color: white;
