--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 .hero {
@@ -18,7 +21,7 @@ body {
     display: flex;
     padding: 8rem 15rem;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: flex-start;
     flex: 1;
 }
 
@@ -30,6 +33,7 @@ body {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
+    margin: 0;
 }
 
 .hero-section > p {
