--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -52,6 +52,7 @@ body {
 .card {
     text-align: center;
     width: 150px;
+    padding-bottom: 100px;
 }
 
 .card > img {
@@ -79,6 +80,35 @@ body {
     margin-right: auto;
     color: #f9faf8;
     font-size: 24px;
+}
+
+.inspirational {
+    background: #e5e7eb;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    padding: 100px 400px;
+    justify-content: center;
+    align-items: center;
+}
+
+.thor {
+    align-self: flex-end;
+    font-weight: 700;
+    font-size: 24px;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-weight: 100;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.action {
+    background: #3882f6;
 }
 
 ul {
