--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -17,6 +17,7 @@ body {
 .header {
     display: flex;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .container {
@@ -24,7 +25,11 @@ body {
     padding: 8rem 15rem;
     justify-content: center;
     align-items: flex-start;
-    flex: 1;
+    gap: 32px;
+}
+
+.container > img {
+    max-width: 100%;
 }
 
 .information {
@@ -84,14 +89,16 @@ body {
 
 .inspirational {
     background: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .quote {
     display: flex;
     flex-direction: column;
-    padding: 100px 400px;
-    justify-content: center;
-    align-items: center;
+    padding: 100px 0;
+    width: 600px;
 }
 
 .thor {
@@ -118,11 +125,14 @@ body {
 .action {
     display: flex;
     background: #3882f6;
-    padding: 50px 150px;
+    padding: 50px;
     justify-content: center;
     align-items: center;
     gap: 100px;
     border-radius: 10px;
+    flex: 1;
+    margin: 0 5rem;
+    width: 400px;
 }
 
 .left > * {
