--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -125,13 +125,13 @@ body {
 .action {
     display: flex;
     background: #3882f6;
-    padding: 50px;
+    padding: 50px 20px;
     justify-content: center;
     align-items: center;
-    gap: 100px;
+    gap: 20px;
     border-radius: 10px;
     flex: 1;
-    margin: 0 5rem;
+    margin: 0 20%;
     width: 400px;
 }
 
